--- a/themeRed.html
+++ b/themeRed.html
@@ -318,10 +318,10 @@
                         <div id="portfolio-filter-container">
                             <ul id="portfolio-filter">
                                 <li><a href="#" class="current" data-filter="*">All</a></li>
-                                <li><a href="#" data-filter=".animation">Animation</a></li>
-                                <li><a href="#" data-filter=".photography">Photoghraphy</a></li>
-                                <li><a href="#" data-filter=".webdesign">Web Design</a></li>
-                                <li><a href="#" data-filter=".printdesign">Print Design</a></li>
+                                <li><a href="#" data-filter=".animation">作品展示</a></li>
+                                <!--<li><a href="#" data-filter=".photography">Web.GIS</a></li>-->
+                                <!--<li><a href="#" data-filter=".webdesign">Mobile.GIS</a></li>-->
+                                <li><a href="#" data-filter=".printdesign">证书</a></li>
                             </ul>
                         </div>
                         <!-- End Portfolio Filter -->
